--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,14 @@
         <activity
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait">
-           <!-- <intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".main.MainActivity"
@@ -49,15 +52,13 @@
         <activity
             android:name=".password.view.ForgetPasswordActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".dashboard.view.DashboardActivity"
-            android:screenOrientation="portrait">
 
+        <activity android:name=".dashboard.DashboardActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
