--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,11 @@
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait">
 
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
 
         </activity>
         <activity
@@ -49,7 +49,14 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".registration.view.RegistrationStepTwoActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" >
+
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".password.view.ForgotPasswordActivity"
             android:screenOrientation="portrait" />
