Implements first card of 'My Profile'

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,19 @@ android {
             storePassword 'android'
         }
     }*/
+    /* signingConfigs {
+         config {
+             keyAlias 'android'
+             keyPassword 'android'
+             storeFile file('E:/Amiyo/L_Pesa_Intellij/l-pesa/app/KEY/lpesa.jks')
+             storePassword 'android'
+         }
+     }*/
     signingConfigs {
         config {
             keyAlias 'android'
             keyPassword 'android'
-            storeFile file('E:/Amiyo/L_Pesa_Intellij/l-pesa/app/KEY/lpesa.jks')
+            storeFile file('/home/kritika/AndroidStudioProjects/L-Pesa/l-pesa/app/KEY/lpesa.jks')
             storePassword 'android'
         }
     }
@@ -36,8 +44,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable true
             //proguardFile '/home/amiyo/AndroidProject/Office/L-Pesa Intellij/app/proguard-rules.pro'
+            // signingConfig signingConfigs.config
+            //proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
             signingConfig signingConfigs.config
-            proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
         }
         build {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
