--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,27 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    /*signingConfigs {
-        config {
-            keyAlias 'android'
-            keyPassword 'android'
-            storeFile file('/home/amiyo/AndroidProject/Office/L-Pesa Intellij/app/src/JKS/lpesa.jks')
-            storePassword 'android'
-        }
-    }*/
-    /* signingConfigs {
-         config {
-             keyAlias 'android'
-             keyPassword 'android'
-             storeFile file('E:/Amiyo/L_Pesa_Intellij/l-pesa/app/KEY/lpesa.jks')
-             storePassword 'android'
-         }
-     }*/
     signingConfigs {
         config {
             keyAlias 'android'
             keyPassword 'android'
-            storeFile file('/home/kritika/AndroidStudioProjects/L-Pesa/l-pesa/app/KEY/lpesa.jks')
+            storeFile file('E:/Amiyo/L_Pesa_Intellij/l-pesa/app/KEY/lpesa.jks')
             storePassword 'android'
         }
     }
@@ -43,10 +27,8 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable true
-            //proguardFile '/home/amiyo/AndroidProject/Office/L-Pesa Intellij/app/proguard-rules.pro'
-            // signingConfig signingConfigs.config
-            //proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
             signingConfig signingConfigs.config
+            proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
         }
         build {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
