--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         applicationId "com.app.l_pesa"
         minSdkVersion 21
         targetSdkVersion 28
+        buildToolsVersion "28.0.3"
         versionCode 1
         versionName "1.0"
 
@@ -31,7 +32,13 @@ android {
             proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
         }
         build {
+           // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+            signingConfig signingConfigs.config
+            proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
         }
     }
     productFlavors {
@@ -57,6 +64,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.adw.library:discrete-seekbar:1.0.1'
     implementation('com.github.bumptech.glide:glide:4.7.1') {
         exclude group: "com.android.support"
     }
