Implements 'Personal Info','Id Info','Contact Info' and 'Employment Info' cards for 'My Profile'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,10 @@
             android:label="@string/change_pin"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
