--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".loanHistory.view.LoanHistoryListActivity"
+            android:label="@string/loan_history"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -39,13 +44,11 @@
         <activity
             android:name=".splash.view.SplashActivity"
             android:screenOrientation="portrait">
-
-          <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".main.MainActivity"
@@ -58,13 +61,15 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".registration.view.RegistrationStepTwoActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
 
-      <!--  <intent-filter>
+            <!--
+        <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>-->
+        </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".password.view.ForgotPasswordActivity"
@@ -72,11 +77,14 @@
         <activity
             android:name=".dashboard.view.DashboardActivity"
             android:screenOrientation="portrait">
-            <!--<intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".password.view.ChangePasswordActivity"
@@ -87,7 +95,7 @@
             android:name=".pin.view.ChangePinActivity"
             android:label="@string/change_pin"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
 
         <meta-data
             android:name="preloaded_fonts"
