--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".loanHistory.view.LoanHistoryDetailsActivity"
+            android:label="@string/loan_details"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity
             android:name=".loanHistory.view.LoanHistoryListActivity"
             android:label="@string/loan_history"
             android:screenOrientation="portrait"
