--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".profile.view.ProfileEditEmpInfo"
+            android:label="@string/employment_info"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"></activity>
+        <activity
             android:name=".profile.view.ProfileEditContactInfoActivity"
             android:label="@string/contact_info"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".profile.view.ProfileEditPersonalActivity"
             android:label="@string/personal_info"
