--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
             signingConfig signingConfigs.config
             // proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
             proguardFile '/home/amiyo/AndroidProject/L_Pesa/l-pesa/app/proguard-rules.pro'
+
+            buildConfigField ("String", 'AWS_PULL','"eu-central-1:a50ad0e2-bed2-42dc-a6b1-8f225f37f5f3"')
+            buildConfigField ("String", 'AWS_BUCKET','"lpesa-profile-identity-proof"')
+            //buildConfigField ("String", 'AWS_URL','"https://s3.ap-south-1.amazonaws.com/securnyx-sentinel/"')
         }
         build {
             // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -41,6 +45,10 @@ android {
             signingConfig signingConfigs.config
             // proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
             //proguardFile '/home/amiyo/AndroidProject/Office/L_Pesa_Intellij/app/proguard-rules.pro'
+
+            buildConfigField ("String", 'AWS_PULL','"eu-central-1:a50ad0e2-bed2-42dc-a6b1-8f225f37f5f3"')
+            buildConfigField ("String", 'AWS_BUCKET','"lpesa-profile-identity-proof"')
+            //buildConfigField ("String", 'AWS_URL','"https://s3.ap-south-1.amazonaws.com/securnyx-sentinel/"')
         }
     }
     productFlavors {
@@ -70,4 +78,8 @@ dependencies {
     implementation('com.github.bumptech.glide:glide:4.7.1') {
         exclude group: "com.android.support"
     }
+
+    implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
 }
