--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation('com.github.bumptech.glide:glide:4.7.1') {
         exclude group: "com.android.support"
