--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url  "http://dl.bintray.com/florent37/maven"
+        }
     }
 }
 
