--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".lpk.view.LPKWithdrawalActivity"
+            android:label="@string/lpk_withdrawal"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
             android:name=".lpk.view.LPKSavingsActivity"
             android:label="@string/lpk_savings"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".investment.view.InvestmentApplyActivity"
             android:label="@string/apply_an_investment"
