--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:name=".lpk.view.LPKWithdrawalActivity"
             android:label="@string/lpk_withdrawal"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden" />
+            android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
             android:name=".lpk.view.LPKSavingsActivity"
             android:label="@string/lpk_savings"
