--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 16 10:47:44 IST 2019
-sdk.dir=/home/amiyo/Android/Sdk
+#Tue Apr 30 11:30:43 IST 2019
+sdk.dir=/root/Android/Sdk
