--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 11 12:16:45 IST 2019
-sdk.dir=/home/amiyo/Android/Sdk
+#Mon May 13 11:28:50 IST 2019
+sdk.dir=/root/Android/Sdk
